# ImageClasifier

./: .gitignore  .vercelignore  CODE_OF_CONDUCT.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  package.json  pyproject.toml  requirements.txt  setup.sh  vercel.json
api/: app.py  index.py  requirements.txt
backend/: data_loader.py  model.py  test.py  train.py  trainer.py
backend/api/: app.py
frontend/: .env.example  astro.config.mjs  package-lock.json  package.json
frontend/src/components/: DatasetExplorer.astro  ModelsManager.astro  PredictionPanel.astro  ProgressMonitor.astro  TrainingPanel.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/scripts/: main.js
