[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cifar10-dashboard"
version = "1.0.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "tensorflow==2.15.0",
    "tensorflow_datasets",
    "flask",
    "flask-cors",
    "pillow"
]
